--- a/msgchi.1
+++ b/msgchi.1
@@ -40,6 +40,9 @@ Message regular expression of input file, which must include three () pairs.
 \fB\-x\fR, \fB\-\-exclude\fR=RE
 Excluded regular expression to be not translated.
 .TP 
+\fB\-X\fR, \fB\-\-xmltag\fR
+Text in XML tags also be translated.
+.TP 
 \fB\-a\fR, \fB\-\-accelerator\fR=""|_|&
 Define keyboard accelerator used in input file, default '_&' for po.
 .SS "Output details: (only with --type=po and without --expression)"
