--- a/msgchi.1
+++ b/msgchi.1
@@ -31,8 +31,8 @@ Translated from and to which language for using the dictionary.
 XXX could be eng(default), zhc, zht or cmn; YYY could be zht, cmn or yue...
 (default depends on LOCALE).
 .TP 
-\fB\-t\fR, \fB\-\-type\fR=po|php|ini|txt
-Message type of input file, which can be php, ini, txt or po(default).
+\fB\-t\fR, \fB\-\-type\fR=po|prg|ini|txt
+Message type of input file, which can be prg, ini, txt or po(default).
 .TP 
 \fB\-e\fR, \fB\-\-expression\fR=(^.*)(.*)(.*$)
 Message regular expression of input file, which must include three () pairs.
