--- a/cmn.po
+++ b/cmn.po
@@ -1,12 +1,12 @@
 # Mandarin Chinese translations for msgchi.
 # This file is distributed under the same license as the msgchi package.
-# Wei-Lun Chao <bluebat@member.fsf.org>, 2017.
+# Wei-Lun Chao <bluebat@member.fsf.org>, 2020.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: msgchi 1.0\n"
-"POT-Creation-Date: 2017-06-09 14:56+0800\n"
-"PO-Revision-Date: 2017-06-09 15:00+0800\n"
+"Project-Id-Version: msgchi 1.4\n"
+"POT-Creation-Date: 2020-10-22 14:56+0800\n"
+"PO-Revision-Date: 2020-10-22 15:00+0800\n"
 "Last-Translator: Wei-Lun Chao <bluebat@member.fsf.org>\n"
 "Language-Team: Mandarin Chinese <hant-l10n@freelists.org>\n"
 "MIME-Version: 1.0\n"
@@ -28,6 +28,9 @@ msgstr "字典檔的名稱"
 
 msgid "message regular expression"
 msgstr "訊息正規表示式"
+
+msgid "force message fuzzy-free"
+msgstr "強制訊息除去模糊"
 
 msgid "keep translated msgstr"
 msgstr "備註翻譯過的 msgstr"
