--- a/msgchi.1
+++ b/msgchi.1
@@ -47,8 +47,11 @@ Text in XML tags also be translated.
 Define keyboard accelerator used in input file, default '_&' for po.
 .SS "Output details: (only with --type=po and without --expression)"
 .TP 
+\fB\-F\fR, \fB\-\-fuzzyfree\fR
+Remove fuzzy entries of all messages.
+.TP 
 \fB\-k\fR, \fB\-\-keep\fR
-keep translated msgstr as remark in output file.
+Keep translated msgstr as remark in output file.
 .TP 
 \fB\-s\fR, \fB\-\-skip\fR
 Skip completed msgid unchanged in output file.
