--- a/msgchi.1
+++ b/msgchi.1
@@ -48,7 +48,7 @@ Define keyboard accelerator used in input file, default '_&' for po.
 .SS "Output details: (only with --type=po and without --expression)"
 .TP 
 \fB\-F\fR, \fB\-\-fuzzyfree\fR
-Remove fuzzy entries of all messages.
+Remove fuzzy marks of all messages.
 .TP 
 \fB\-k\fR, \fB\-\-keep\fR
 Keep translated msgstr as remark in output file.
