--- a/ChangeLog
+++ b/ChangeLog
@@ -10,3 +10,5 @@ RELEASE 1.1 (2017-07-07)
         update release
 RELEASE 1.0 (2017-06-07)
 	first release
+RELEASE 0.2 (2005-09-21)
+        alpha release
