--- a/ChangeLog
+++ b/ChangeLog
@@ -1,14 +1,8 @@
+RELEASE 2.0 (2022-01-18)
 RELEASE 1.5 (2020-12-10)
-        update release
 RELEASE 1.4 (2020-10-22)
-        update release
 RELEASE 1.3 (2019-04-15)
-        update release
 RELEASE 1.2 (2019-01-17)
-        update release
 RELEASE 1.1 (2017-07-07)
-        update release
 RELEASE 1.0 (2017-06-07)
-	first release
 RELEASE 0.2 (2005-09-21)
-        alpha release
