--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+RELEASE 2.3 (2023-05-24)
+RELEASE 2.2 (2022-07-15)
+RELEASE 2.1 (2022-05-17)
 RELEASE 2.0 (2022-01-18)
 RELEASE 1.5 (2020-12-10)
 RELEASE 1.4 (2020-10-22)
